# dynamic-loading-example

./: CMakeLists.txt  README.md
include/: netflix_show.h  plugin_base.h
plugins/: CMakeLists.txt  json_plugin.cpp  json_plugin.h
src/: dynamic_lib.cpp  dynamic_lib.h  main.cpp  netflix_catalogue.cpp  netflix_catalogue.h  netflix_show.cpp
